--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase/Google config
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
+
+# Env files
+*.env
